WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146066
AX: VoiceOver in iOS not announcing generic WAI-ARIA region, even if labelled properly
https://bugs.webkit.org/show_bug.cgi?id=146066
Summary
AX: VoiceOver in iOS not announcing generic WAI-ARIA region, even if labelled...
chris fleizach
Reported
2015-06-17 09:32:46 PDT
Besides the WAI-ARIA landmark regions, developers can also create a generic role="region" and then assign it a aria-label. However, VO is not announcing the start of any generic regions. Steps to Reproduce: Go to
http://wafflerama.com/a11y/landmarks.html
Ensure VoiceOver is running Navigate through the page (right flick) until you reach the 6th line under the Landmarks with Labels heading Expected Results: VoiceOver should announce "test region" then the text inside the region. Actual Results: VoiceOver does not announce the region, but simply reads the text. <
rdar://problem/19785537
>
Attachments
patch
(4.99 KB, patch)
2015-06-17 09:35 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2015-06-17 09:35:25 PDT
Created
attachment 255020
[details]
patch
WebKit Commit Bot
Comment 2
2015-06-17 09:38:19 PDT
Attachment 255020
[details]
did not pass style-queue: ERROR: Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:436: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 3
2015-06-17 16:21:31 PDT
http://trac.webkit.org/changeset/185675
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug