AX: VoiceOver in iOS not announcing generic WAI-ARIA region, even if labelled properly https://bugs.webkit.org/show_bug.cgi?id=146066

Reviewed by Darin Adler.

Source/WebCore:

Allow the region role to identify as a landmark type.

Updated test: platform/ios-simulator/accessibility/landmark-types.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityIsLandmarkRole:]):

LayoutTests:

* platform/ios-simulator/accessibility/landmark-type-expected.txt:
* platform/ios-simulator/accessibility/landmark-type.html:



Canonical link: https://commits.webkit.org/164128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185675 268f45cc-cd09-0410-ab3c-d52691b4dbfc